jPlayer support påbegyndt

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ html, body {
 {
 	height: 200px;
 	width: 100%;
-	background: #f0f;
+	background: #eeeeee;
 	position: fixed;
 	bottom: 0px;
 	left: 0px;
