--- a/views/index.jade
+++ b/views/index.jade
@@ -6,21 +6,26 @@ html
 		title MusicPlayer
 		link(type="text/css",rel="stylesheet",href="styles/bootstrap.min.css")
 		link(type="text/css",rel="stylesheet",href="styles/main.css")
+		link(href="http://fonts.googleapis.com/css?family=Open+Sans",rel="stylesheet",type="text/css")
 
 	body
-		nav.navbar.navbar-default.navbar-fixed-top
+		nav.navbar.navbar-default.navbar-fixed-top.navbar-inverse
 			.navbar-header
 				.a.navbar-brand(href="#", id="home") MusicPlayer
-
-			div.navbar-form.navbar-left
-				button(type="button").btn.btn-default#up Up
-
+			
 			form.navbar-form.navbar-right
 				.form-group
 					input.form-control(type="text", placeholder="Search")
 				button(type="submit").btn.btn-default Search
 
-		ul#list
+		div#toolbar
+			.breadcrumb-folder
+			.pull-right
+				button(type="button").hide.btn.btn-default#up Back
+				span &nbsp;
+
+		div#list-container
+			ul#list
 		div#playlist
 			table.table.table-hover.table-condensed
 				thead
@@ -36,15 +41,19 @@ html
 			.row
 				.col-md-6.col-md-offset-3
 					.btn-group
-						.btn.btn-default#prev Previous
-						.btn.btn-default#pause Pause
-						.btn.btn-default#next Next
+						.btn.btn-default#prev 
+							span.glyphicon.glyphicon-backward
+						.btn.btn-default#pause
+							span.glyphicon.glyphicon-pause
+							span.glyphicon.glyphicon-play
+						.btn.btn-default#next
+							span.glyphicon.glyphicon-forward
 
-					p &nbsp;
-					.pull-left#position 0:00
-					.pull-right#duration 0:00
-					.progress(style="margin: auto; width: 80%")
-						.progress-bar.progress-bar-info(style="width: 0%")
+					.song-progress(style="width:100%; margin-top: 50px")
+						.pull-left#position 0:00
+						.pull-right#duration 0:00
+						.progress(style="margin: auto; width: 85%")
+							.progress-bar.progress-bar-info(style="width: 0%")
 
 					.text-center
 						h3#song 
