Omlagt til gulp, komponenter kræver nu rewrite på grund af circular dependencies

--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -4,7 +4,6 @@ html
 
 	head
 		title MusicPlayer
-		link(type="text/css",rel="stylesheet",href="styles/bootstrap.min.css")
 		link(type="text/css",rel="stylesheet",href="styles/main.css")
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans",rel="stylesheet",type="text/css")
 
@@ -56,8 +55,7 @@ html
 			.jplayer
 
 
-		script(type="text/javascript", src="scripts/lodash.min.js")
-		script(type="text/javascript", src="scripts/jquery.2.0.3.min.js")
-		script(type="text/javascript", src="scripts/jQuery.jPlayer.2.5.0/jquery.jplayer.min.js")
-		script(type="text/javascript", src="scripts/moment.js")
-		script(type="text/javascript", src="scripts/main.js")
+
+		script(type="text/javascript", src="scripts/vendor/jquery.2.0.3.min.js")
+		script(type="text/javascript", src="scripts/vendor/jquery.jplayer.min.js")
+		script(type="text/javascript", src="scripts/app.js")
