--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -8,7 +8,7 @@ html, body {
 
 #top
 {
-	height: 30px;
+	height: 50px;
 	background: #666;
 }
 
@@ -18,7 +18,7 @@ html, body {
 	list-style: none;
 	padding: 0px;
 	width: 100%;
-
+	overflow-x: hidden;
 }
 
 #list li.generic .btn-group
@@ -122,39 +122,31 @@ html, body {
 
 #list-container
 {
-	top: 70px;
+	top: 50px;
 	bottom: 240px;
 	position: fixed;
 	overflow: auto;
 	border-right: solid 2px #ccc;
 }
 
-#toolbar
+#up
 {
-	background: #ddd;
-	height: 40px;
-	position: fixed;
-	top: 30px;
-	line-height: 30px;
-}
-
-.breadcrumb-folder 
-{
-	overflow: hidden;
-	position: absolute;
-	height: 100%;
-	line-height: 40px;
+	margin-left: 8px;
+	margin-top: 8px;
+	font-size: 20px;
 	float: left;
-	left: 10px;
-	right: 67px;
 }
 
-#toolbar .btn
+#artist
 {
-	margin-top: 3px;
+	margin: 0;
+	line-height: 50px;
+	text-indent: 11px;
+	color: #eee;
+	float: left;
 }
 
-#toolbar, #list-container
+#list-container
 {
 	width: 30%;
 }
@@ -165,7 +157,7 @@ html, body {
 	width: 70%;
 	position: fixed;
 	left: 30%;
-	top: 30px;
+	top: 50px;
 	bottom: 240px;
 	position: fixed;
 	overflow: auto;
