--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -26,6 +26,18 @@ html, body {
 	margin-right: 5px;
 }
 
+#list li.alphabet-letter {
+	font-size: 20px;
+	font-weight: bold;
+	text-indent: 10px;
+	margin-top: 15px;
+}
+
+#list li.alphabet-letter:first-child
+{
+	margin-top: 5px;
+}
+
 #list li.generic .btn-group .btn
 {
 	width: 25px;
@@ -137,7 +149,7 @@ html, body {
 	float: left;
 }
 
-#artist
+h2.artist
 {
 	margin: 0;
 	line-height: 50px;
@@ -188,6 +200,7 @@ html, body {
 	background: #eeeeee;
 	position: fixed;
 	bottom: 0px;
+	border-top: solid 1px #aaa;
 	left: 0px;
 }
 
