Too many things to list!

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -7,392 +7,15 @@ html, body {
 }
 
 
-/* status */
-@status-height: 30px;
-@status-background: #333;
-
-/* top */
-@top-height: 50px;
-@top-background: #666;
-@top-playlist-background: #444;
-
-/* library */
-@library-width: 50%;
-
-/* playlist */
-
-/* player */
-@player-height: 240px;
-@player-background: #ccc;
-
-#status {
-	height: @status-height;
-	width: 100%;
-	background: @status-background;
-	img {
-		height: @status-height - 4px;
-		margin-top: 2px;
-		margin-left: 5px;
-		width: auto;
-	}
-
-	.pull-right
-	{
-		color: #eee;
-		line-height: @status-height;
-		margin-right: 5px;
-	}
-}
-
-#top
-{
-	height: @top-height;
-	background: @top-background;
-
-
-	h2
-	{
-		margin: 0;
-		line-height: 50px;
-		text-indent: 11px;
-		color: #eee;
-		float: left;
-	}
-
-	.library {
-		width: 50%;
-		float: left;
-
-		#up
-		{
-			margin-left: 8px;
-			margin-top: 8px;
-			font-size: 20px;
-			float: left;
-		}
-	}
-
-	.playlist
-	{
-		color: #fff;
-		width: 50%;
-		height: 100%;
-		float: left;
-		background: #444;
-
-		.arrow-right {
-			width: 0;
-			height: 0;
-			border-top: @top-height / 2 solid transparent;
-			border-bottom: @top-height / 2 solid transparent;
-			border-left: @top-height / 3 solid @top-background;
-			background: @top-playlist-background;
-			float: left;
-		}
-	}
-}
-
-#alphabet-navigation {
-	position: fixed;
-	top: @top-height + @status-height;
-	bottom: @player-height;
-	width: 40px;
-	background: #888;
-
-	.letter {
-		width: 100%;
-		color: #fff;
-		text-align: center;
-		cursor: pointer;
-
-		&:hover {
-			background: #aaa;
-		}
-
-		&.active {
-			background-color: #ccc;
-			transition-property: background-color;
-			transition-duration: 0.15s;
-			transition-timing-function: ease-in;
-			margin-left: 0px;
-		}
-
-		&.normal {
-			transition-property: background-color;
-			transition-duration: 0.15s;
-			transition-timing-function: ease-out;
-		}
-	}
-}
-
-#list-container
-{
-	width: @library-width;
-	top: @top-height + @status-height;
-	bottom: 240px;
-	position: fixed;
-	overflow: hidden;
-	border-right: solid 2px #ccc;
-
-}
-
-.scrollbar
-{
-	border-radius: 2px;
-	background-color: #000;
-	width: 5px;
-	top: 0px;
-	right: 3px;
-	position: absolute;
-	opacity: 0.3;
-	transition-property: opacity;
-	transition-duration: 0.3s;
-	transition-timing-function: ease;
-
-	&.animated-hide {
-		opacity: 0;
-	}
-}
-
-#list
-{
-	position: relative;
-	list-style: none;
-	padding: 0px;
-	overflow-x: hidden;
-	overflow: auto;
-	width: 100%;
-	height: 100%;
-	right: -15px;
-	padding-left: 25px;
-}
-
-#list li.generic .btn-group
-{
-	margin-right: 12px;
-}
-
-#list li.alphabet-letter {
-	font-size: 20px;
-	font-weight: bold;
-	text-indent: 10px;
-	margin-top: 15px;
-}
-
-#list li.alphabet-letter:first-child
-{
-	margin-top: 5px;
-}
-
-#list li.generic .btn-group .btn
-{
-	width: 25px;
-	height: 25px;
-	padding: 0;
-	margin-top: 4px;
-	font-size: 15px;
-	color: #444;
-}
-
-#list li.generic .btn-group .btn span.glyphicon {
-	top: 0px;
-}
-
-#list li.generic {
-	cursor: pointer;
-	text-overflow:ellipsis;
-	user-select: none;
-	-webkit-user-select: none;
-	text-indent: 20px;
-	height: 35px;
-	line-height: 35px;
-	border-bottom: solid 1px #eee;
-	margin-left: -100%;
-}
-
-#list li.generic.enter
-{
-	transition-property: margin;
-	transition-duration: 0.3s;
-	transition-timing-function: ease;
-	margin-left: 0px;
-}
-
-#list li.generic:hover
-{
-	background: #eee;
-}
-
-
-#list li.album
-{
-	margin-top: 15px;
-	margin-bottom: 10px;
-}
-
-#list li.album .btn-group .btn
-{
-	width: 35px;
-	height: 35px;
-	padding: 0;
-	font-size: 17px;
-	color: #444;
-}
-
-#list li.album .row
-{
-	margin-left: 0px;
-	margin-right: 0px;
-	min-width: 512px;
-	opacity: 0;
-}
-
-#list li.album .row.enter
-{
-	transition-property: opacity;
-	transition-duration: 0.3s;
-	transition-timing-function: ease;
-	opacity: 1;
-}
-
-#list li.album .cover
-{
-	padding-right: 0px;
-}
-#list li.album .cover img
-{
-	width: 80%;
-	margin-left: 10%;
-	height: auto;
-}
-#list li.album .info
-{
-	text-overflow: ellipsis;
-	wrap: nowrap;
-	padding-left: 0px;
-}
-
-#list li.album .info h3
-{
-	margin-top: 0px;
-}
-
-
-
-
-#playlist-container
-{
-	width: 100% - @library-width;
-	position: fixed;
-	left: @library-width;
-	top: @status-height + @top-height;
-	bottom: 240px;
-	position: fixed;
-	overflow: hidden;
-
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-
-	#playlist {
-		#playlist {
-			position: relative;
-			overflow-x: hidden;
-			overflow: auto;
-			width: 100%;
-			height: 100%;
-			right: -15px;
-
-			 .item
-			{
-				cursor: pointer;
-				font-size: 14px;
-			}
-		}
-
-		#playlist
-
-	}
-}
-
-
-
-#player
-{
-	height: @player-height;
-	width: 100%;
-	background: @player-background;
-	position: fixed;
-	bottom: 0px;
-	border-top: solid 1px #aaa;
-	left: 0px;
-
-	.row {
-		margin-top: 15px;
-	}
-
-
-	#pause
-	{
-		.glyphicon-pause {
-			display: none;
-		}
-
-		&.playing {
-			.glyphicon-pause
-			{
-				display: inline;
-			}
-
-			.glyphicon-play
-			{
-				display: none;
-			}
-		}
-	}
-
-	img {
-		height: 70%;
-		margin-top: 2%
-	}
-
-	 .btn-group
-	{
-		width: 240px;
-
-		display: block;
-		margin-top: 20px;
-		height: 25px;
-
-
-		.btn
-		{
-			font-size: 28px;
-			padding-top: 10px;
-			height: 50px;
-			width: 70px;
-		}
-	}
-
-	#progress {
-		height: 3px;
-		background: #999;
-		width: 80%;
-		margin: auto;
-		margin-top: 20px;
-
-		.indicator
-		{
-			width: 0%;
-			height: 100%;
-			background: #663366
-		}
-	}
-}
-
+@import "_variables.less";
+@import "_status.less";
+@import "_top.less";
+@import "_alphabet-navigation.less";
+@import "_scrollbar.less";
+@import "_library.less";
+@import "_playlist.less";
+@import "_player.less";
+@import "_dialog.less";
 
 /* drag'n'drop */
 body.dragging, body.dragging * {
@@ -413,3 +36,8 @@ tr.placeholder:before {
   position: absolute;
   /** Define arrowhead **/
 }
+
+
+
+
+@import "_responsive.less";
