--- a/client/styles/_library.less
+++ b/client/styles/_library.less
@@ -12,10 +12,24 @@
 	padding-left: 0px;
 }
 
+#list li.summary {
+	//background-color: #F7F7F7;
+	color: #333;
+	padding: 10px;
+	font-size: 12px;
+	overflow: hidden;
+
+	h4
+	{
+		margin-top: 0px;
+	}
+}
+
 #list li.generic .btn-group
 {
 	margin-right: 12px;
 }
+
 
 #list li.alphabet-letter {
 	font-size: 20px;
