--- a/client/styles/_playlist.less
+++ b/client/styles/_playlist.less
@@ -3,7 +3,7 @@
 	width: 100% - @library-width;
 	position: fixed;
 	left: @library-width;
-	top: @status-height + @top-height;
+	top: @status-height + @top-height + @alphabet-navigation-height;
 	bottom: 240px;
 	overflow-x: hidden;
 	overflow-y: auto;
