--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -6,11 +6,21 @@ html, body {
 	font-family: 'Open Sans', Verdana;
 }
 
+  a {
+    color: #000;
+    font-weight: bold;
+  }
+
+  a:hover {
+    color: #663366;
+
+  }
+
 
 @import "_variables.less";
 @import "_status.less";
 @import "_top.less";
-@import "_alphabet-navigation.less";
+@import "_content-bars.less";
 @import "_scrollbar.less";
 @import "_library.less";
 @import "_playlist.less";
