--- a/client/styles/_top.less
+++ b/client/styles/_top.less
@@ -19,10 +19,22 @@
 
 		#up
 		{
-			margin-left: 8px;
-			margin-top: 8px;
-			font-size: 20px;
 			float: left;
+			cursor: pointer;
+			height: 50px;
+			width: 50px;
+			font-size: 24px;
+			text-align: center;
+			color: #fff;
+			background: #777;
+
+			&:hover {
+				background: #999;
+			}
+			span.glyphicon
+			{
+				line-height: 50px;
+			}
 		}
 	}
 
