--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -8,7 +8,8 @@ html, body {
 
   a {
     color: #000;
-    font-weight: bold;
+    text-decoration: underline;
+    //font-weight: bold;
   }
 
   a:hover {
@@ -26,6 +27,8 @@ html, body {
 @import "_playlist.less";
 @import "_player.less";
 @import "_dialog.less";
+
+@import "_dialog-artist.less";
 
 /* drag'n'drop */
 body.dragging, body.dragging * {
