--- a/client/templates/navigation-album.jade
+++ b/client/templates/navigation-album.jade
@@ -4,7 +4,7 @@ li.album
 			img(src=(cover || '/images/no-cover.png'))
 		.col-xs-8.info
 			h3=name
-			h5 2007
+			h5=year
 			h5=(items.length + " songs")
 			.btn-group
 				button.btn.btn-default.play
