Major refactoring of library, different artist view

--- a/client/styles/_content-bars.less
+++ b/client/styles/_content-bars.less
@@ -1,4 +1,4 @@
-#alphabet-navigation {
+#library-navigation {
 	position: fixed;
 	top: @top-height + @status-height;
 	height: @alphabet-navigation-height;
