--- a/client/styles/_dialog-artist.less
+++ b/client/styles/_dialog-artist.less
@@ -41,12 +41,14 @@
 		}
 	}
 
-	img.pull-left {
+	.artist-image {
 		border-radius: 50%;
 		width: 100px;
 		height: 100px;
 		border: solid 1px #663366;
 		opacity: 0;
+		background-size: auto 100%;
+		background-position: 50% 50%;
 	}
 
 	
