--- a/client/styles/_library.less
+++ b/client/styles/_library.less
@@ -1,4 +1,4 @@
-#list
+#library
 {
 	width: @library-width;
 	top: @top-height + @status-height + @alphabet-navigation-height;
@@ -10,130 +10,123 @@
 	margin-bottom: 0px;
 	list-style-type: none;
 	padding-left: 0px;
-}
 
-#list li.summary {
-	//background-color: #F7F7F7;
-	color: #333;
-	padding: 10px;
-	font-size: 12px;
-	overflow: hidden;
+	li.artist {
+		cursor: pointer;
+		text-overflow:ellipsis;
+		user-select: none;
+		-webkit-user-select: none;
+		text-indent: 20px;
+		height: 35px;
+		line-height: 35px;
+		border-bottom: solid 1px #eee;
+		margin-left: -100%;
 
-	h4
+		&.enter
+		{
+			transition-property: margin;
+			transition-duration: 0.3s;
+			transition-timing-function: ease;
+			margin-left: 0px;
+		}
+
+		&:hover {
+			background: #eee;
+		}
+
+		.btn-group {
+		 	margin-right: 12px;
+
+		 	.btn {
+		 		width: 25px;
+				height: 25px;
+				padding: 0;
+				margin-top: 4px;
+				font-size: 15px;
+				color: #444;
+
+				.glyphicon {
+					top: 0px;
+				}
+		 	}
+		 }
+	}
+
+	li.alphabet-letter {
+		font-size: 20px;
+		font-weight: bold;
+		text-indent: 10px;
+		margin-top: 15px;
+
+		&:first-child {
+			margin-top: 5px;
+		}
+	}
+
+	li.album
 	{
-		margin-top: 0px;
+		text-align: center;
+
+		img {
+			max-width: 220px;
+			margin-top: 30px;
+			width: 25%;
+			height: auto;
+			border-radius: 50%;
+			border: solid 4px #663366;
+		}
+
+		h4
+		{
+			color: #aaa;
+		}
+
+		.controls
+		{
+			a {
+				padding-left: 20px;
+				padding-right: 20px;
+				height: 20px;
+				line-height: 20px;
+				text-decoration: none;
+				font-size: 18px;
+
+				.glyphicon
+				{
+					line-height: 20px;
+					font-size: 16px;
+				}
+			}
+		}
+
+		.songs
+		{
+			padding-left: 0px;
+			padding-right: 0px;
+			list-style-type: none;
+			text-align: left;
+			//background: #F3F3F3;
+			border-bottom: dotted 1px #663366;
+			//border-top: solid 1px #663366;
+			text-indent: 30px;
+
+			li {
+				&:first-child
+				{
+					border-top: 0px;
+				}
+
+				&:last-child
+				{
+					border-bottom: 0px;
+				}
+
+				height: 40px;
+				line-height: 40px;
+				border-bottom: dotted 1px #ccc;
+			}
+		}
+
+
 	}
 }
-
-
-#list li.generic .btn-group
-{
-	margin-right: 12px;
-}
-
-
-#list li.alphabet-letter {
-	font-size: 20px;
-	font-weight: bold;
-	text-indent: 10px;
-	margin-top: 15px;
-}
-
-#list li.alphabet-letter:first-child
-{
-	margin-top: 5px;
-}
-
-#list li.generic .btn-group .btn
-{
-	width: 25px;
-	height: 25px;
-	padding: 0;
-	margin-top: 4px;
-	font-size: 15px;
-	color: #444;
-}
-
-#list li.generic .btn-group .btn span.glyphicon {
-	top: 0px;
-}
-
-#list li.generic {
-	cursor: pointer;
-	text-overflow:ellipsis;
-	user-select: none;
-	-webkit-user-select: none;
-	text-indent: 20px;
-	height: 35px;
-	line-height: 35px;
-	border-bottom: solid 1px #eee;
-	margin-left: -100%;
-}
-
-#list li.generic.enter
-{
-	transition-property: margin;
-	transition-duration: 0.3s;
-	transition-timing-function: ease;
-	margin-left: 0px;
-}
-
-#list li.generic:hover
-{
-	background: #eee;
-}
-
-
-#list li.album
-{
-	margin-top: 15px;
-	margin-bottom: 10px;
-}
-
-#list li.album .btn-group .btn
-{
-	width: 35px;
-	height: 35px;
-	padding: 0;
-	font-size: 17px;
-	color: #444;
-}
-
-#list li.album .row
-{
-	margin-left: 0px;
-	margin-right: 0px;
-	min-width: 512px;
-	opacity: 0;
-}
-
-#list li.album .row.enter
-{
-	transition-property: opacity;
-	transition-duration: 0.3s;
-	transition-timing-function: ease;
-	opacity: 1;
-}
-
-#list li.album .cover
-{
-	padding-right: 0px;
-}
-#list li.album .cover img
-{
-	width: 80%;
-	margin-left: 10%;
-	height: auto;
-}
-#list li.album .info
-{
-	text-overflow: ellipsis;
-	wrap: nowrap;
-	padding-left: 0px;
-}
-
-#list li.album .info h3
-{
-	margin-top: 0px;
-}
-
