--- a/client/styles/_responsive.less
+++ b/client/styles/_responsive.less
@@ -2,7 +2,7 @@
 
 @media screen and (max-height: 1000px)
 {
-	#playlist, #list, #alphabet-navigation {
+	#playlist, #library, #alphabet-navigation {
 		bottom: @responsive-player-height;
 	}
 
